# zenith-demo-rust-web

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  mysql.sql
src/: lib.rs  main.rs
src/cron/: check_lamp_status.rs  cron_task_manager.rs  lamp_check_offline.rs  mod.rs
src/handles/: users.rs  uv_lamp.rs
src/init/: config.rs  logging.rs  mod.rs  routes.rs  tasks.rs
src/models/: user.rs
src/params/requests/: common.rs  mod.rs  user.rs  uv_lamp.rs
src/params/responses/: common.rs  user.rs
src/repositories/: mod.rs  user.rs  uv_lamp_mqtt_message.rs  uv_lamp_mqtt_notify_job.rs  uv_lamp_mqtt_received_messages.rs
src/routes/: users.rs  uv_lamp.rs
src/services/: mod.rs
src/services/users/: login_service.rs
src/services/uv_lamp/: control_service.rs  mod.rs
src/tasks/: mod.rs  mqtt_status_tasks.rs  mqtt_tasks.rs  task_manager.rs
src/utils/: config.rs  error.rs  jwt.rs  mod.rs  mqtt.rs  mysql.rs  password.rs  tesb_api.rs
