[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
argon2 = "0.5.3"
splx = { version = "0.8.2", features = ["mysql"] }
