[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
argon2 = "0.5.3"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
dotenv = "0.15.0"
anyhow = "1.0.89"
jsonwebtoken = "9.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"